--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.539.0",
@@ -24,6 +25,8 @@
     "@eslint/eslintrc": "^3",
     "@jest/globals": "^30.0.5",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -31,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.1.1",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
