--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "styled-components": "^6.1.19",
-    "wrangler": "^4.33.2"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
