--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "error-check": "next lint && tsc --noEmit"
   },
   "dependencies": {
+    "@types/video.js": "^7.3.58",
     "dotenv": "^17.2.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
@@ -22,6 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.19",
+    "video.js": "^8.23.4",
     "wrangler": "^4.33.2"
   },
   "devDependencies": {
