--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "error-check": "next lint && tsc --noEmit"
   },
   "dependencies": {
-    "@types/video.js": "^7.3.58",
+    "@mux/mux-node": "^12.7.0",
+    "@mux/mux-player-react": "^3.6.0",
     "dotenv": "^17.2.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
@@ -22,8 +23,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "styled-components": "^6.1.19",
-    "video.js": "^8.23.4"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
