--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "error-check": "next lint && tsc --noEmit"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^6.8.0",
     "@mux/mux-node": "^12.7.0",
     "@mux/mux-player-react": "^3.6.0",
+    "@testing-library/jest-dom": "^6.8.0",
     "dotenv": "^17.2.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.5.2",
