--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.5.2",
