--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mux/mux-node": "^12.7.0",
     "@mux/mux-player-react": "^3.6.0",
+    "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^17.2.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
